--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "i": "^0.3.6",
+    "node-sass": "^4.14.1",
+    "npm": "^7.14.0",
+    "sass-loader": "^7.3.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
