--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "hooper": "^0.3.4",
     "i": "^0.3.6",
     "node-sass": "^4.14.1",
     "npm": "^7.14.0",
