--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^4.14.1",
     "npm": "^7.14.0",
     "sass-loader": "^7.3.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
